# elm-ethereum-generator

./: .gitignore  ChangeLog.md  Internal.hs  JsonABI.hs  LICENSE  Main.hs  README.md  abi.json  abi.minified.json  abi1.json  changelog  elm-ethereum-generator.cabal  elm-web3-contract.cabal  package.yaml  stack.yaml
app/: Main.hs
examples/: ComplexStorage.abi  ComplexStorage.elm  ComplexStorage.sol  ERC20.elm  EtherDelta.elm  SaiTub.elm  SmokeSig.abi  SmokeSig.elm  SmokeSig.sol  erc20.abi  ether-delta.json  ss-abi.json  test.elm
package/npm/: index.js  package-lock.json  package.json
src/: CLI.hs  Generator.hs  Internal.hs  JsonAbi.hs  Main.hs  Types.hs  Utils.hs
src/Generator/: Converters.hs  ElmLang.hs  Templates.hs
