name:                elm-ethereum-generator
version:             1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/cmditch/elm-ethereum-generator
license:             BSD3
license-file:        LICENSE
author:              Coury Ditch
maintainer:          Coury Ditch
copyright:           2018 Coury Ditch
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable elm-ethereum-generator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson >= 0.11,
                       base >=4.2 && <5,
                       bytestring >= 0.9 && < 0.11,
                       directory >= 1.0 && < 2.0,
                       filepath >= 1 && < 2.0,
                       pretty >= 1.0 && < 2.0,
                       optparse-applicative >= 0.14 && < 0.15,
                       ansi-wl-pprint >= 0.6.8.1 && < 0.7,
                       process,
                       text >= 1 && < 2,
                       ilist

  other-modules:       Generator
                       Generator.Converters
                       Generator.ElmLang
                       Generator.Templates
                       Types
                       Utils
