name:                elm-web3-contract
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/elm-web3-contract#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable elm-web3-contract
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:        aeson >= 0.11,
                        base >=4.2 && <5,
                        bytestring >= 0.9 && < 0.11,
                        directory >= 1.0 && < 2.0,
                        filepath >= 1 && < 2.0,
                        pretty >= 1.0 && < 2.0,
                        process,
                        text >= 1 && < 2
